vizier/ui/css/vizier.scss
/* ... */
/************ Caveats ************/

button.show_caveat
{
  float: right;
  height: 20px;
  width: 15px;
  padding: 0px;
  font-size: 10px;
  text-align: center;
}

a.show_caveat
{
  font-weight: bold;
  color: #600;
}

div.modal_background
{
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  background: #000;
  opacity: 0.3;
  z-index: $modal_layer;
}

/************ Editor ************/

/* The last child of a parameter list is a "template" placeholder to allow
   adding more records by just typing */

table.parameter_list {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
    thead {
      display: flex;
      width: 100%;
      justify-content: space-evenly;
      tr {
        display: flex;
        width: 100%;
        justify-content: center;
        th {
          display: flex;
          width: 100%;
          justify-content: center;
        }
      } 
    }
    // thead th:last-child
    // {
    //   width: 0px;
    // }

    tbody {
      width: 100%;
      justify-content: space-evenly;
      tr {
        display: flex;
        width: 100%;
        justify-content: space-around;
        
        td {
          display: flex;
          width: 30%;
          justify-content: center;
          .remove_y_column_button:first-child {
            display: none;
          }
          .reactive {
            // div {
            //   display: inline list-item;
            // }
            button {
              width: 24px;
            }
          }
          button {
            width: 24px;
            height: 24px;
          }
          .parameter {
            display: inline-block;
            width: fit-content;
            select.command-argument {
              //width: 130px;
              max-width: 120px;
              min-width: 90px;
              vertical-align: center ;
            }
          }
          input[name="Label"]{
            width: 85%;
          }
          input[type="radio"] {
            display: none;
            }

          .color_parameter input[type="radio"]:checked ~ label:before {
            span {
                  border: 3px solid;
                  border-color: #000000;
                  transform: scale(1.25);
            }
          }
            div.color_parameter {
              label {
                font-size: 0;
                display: inline-block;
                width: 15px;
                height: 15px;
                margin-right: 10px;
                cursor: pointer;
                &:hover {
                     span { 
                        transform: scale(1.25); 
                      }
                }
                span {
                  display: block;
                  width: 100%;
                  height: 100%;
                  transition: transform .2s ease-in-out; }
              }
            } 
          
          div.color_parameter :nth-child(1){
            span {
             background: #000;
              border: 0.5px solid;
             border-color: #000000;
            }
          }
          div.color_parameter :nth-child(2){
            span {
            background: #FFFFFF;
             border: 0.5px solid;
             border-color: #000000;
            }
          }
          div.color_parameter :nth-child(3){
            span {
            background: #214478;
            border: 0.5px solid;
             border-color: #000000;
            }
          }
          div.color_parameter :nth-child(4){
            span {
            background: #FF0000;
             border: 0.5px solid;
             border-color: #000000;
            }
          }
          div.color_parameter :nth-child(5){
            span {
            background: #FFD600;
            border: 0.5px solid;
            border-color: #000000;
            }
          }
          div.color_parameter :nth-child(6){
            span {
            background: #00B507;
             border: 0.5px solid;
             border-color: #000000;
            }
          }
   
    
          }
        }
      } 

    tbody td:last-child
    {
      // opacity: 0.6;

      // width: 0px;

      button.delete_row
      {
        display: none;
      }
    }


    td
    {
      //width: 140px;
      // display: flex; 
      // text-align: center; 
      // vertical-align: center;
      fieldset {
        border: 0;
        legend {
          display: none ;
        }
      }
    }

    // Keep the labels for accessibility's sake, but don't include them
    // in the layout.
    td label
    {
      display: none;
    }
}
/* ... */

